infrastructure/vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: atit
spec:
  hosts: 
   - "*"
  http:
    - route:
       - destination:
           host: backend-podinfo
